fixing table columns alignment

--- a/RShinyApps/sharedscripts/custom.css
+++ b/RShinyApps/sharedscripts/custom.css
@@ -71,4 +71,8 @@ a {
   font-weight:normal!important; 
 }
 
+.btn.btn-info {
+  margin-bottom:20px;
+}
+
 
